# SomeRandoTetrisBot

./: .gitignore  CMakeLists.txt  README.md  god.txt  piecemaker.html
pantheon/: 93k_fitness_seed_2  generation_199_101709.000000  handmade.txt  korea.txt  not_sure_but_cool
src/: BitMatrix.h  Macros.h  Stacker.cpp  Stacker.h  StackerBot.cpp  StackerBot.h  evolution_main.cpp  game_main.cpp  tests.cpp
